--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
 <body>
   <h1>Dinosaurs</h1>
   <div>
-    <img src="images/ankylosaurus.svg" alt="">
-    <h2>Ankylosaurus</h2>
-  </div>
-  <div>
-    <img src="images/hadrosaur.svg" alt="">
-    <h2>Hadrosaur</h2>
-  </div>
-  <div>
-    <img src="images/stegosaurus.svg" alt="">
-    <h2>Stegosaurus</h2>
-  </div>
-  <div>
-    <img src="images/triceratops.svg" alt="">
-    <h2>Triceratops</h2>
+    <ol>
+      <li class="list-group">
+        <i class="icon i-64">
+          <img src="images/ankylosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Ankylosaurus</span>
+        <i class="icon i-64">
+          <img src="images/hadrosaur.svg" alt="">
+        </i>
+        <span class="icon-label">Hadrosaur</span>
+        <i class="icon i-64">
+          <img src="images/stegosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Stegosaurus</span>
+        <i class="icon i-64">
+          <img src="images/triceratops.svg" alt="">
+        </i>
+        <span class="icon-label">Triceratops</span>
+      </li>
+    </ol>
   </div>
 </body>
 </html>
